# RustoDiscordBot

./: 404.html  Cargo.toml  README.md  hello.html
src/: lib.rs  main.rs
src/commands/: chatgpt.rs  hello.rs  mod.rs
src/commands/music/: back.rs  mod.rs  play.rs  stop.rs
src/terminator/: mod.rs  teminate.rs  terminator.rs
