[package]
name = "rustobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird = { version = "0.3.1", features = ["builtin-queue"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
