[package]
name = "rustobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.5"
songbird = "0.3.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
