[package]
name = "rustobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = {  version = "0.11.6", default-features = false, features = ["client", "cache", "standard_framework", "framework", "gateway", "rustls_backend", "model", "collector"] }
songbird = "0.3.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
youtube_dl = "0.8.0"
chatgpt_rs = "1.2.0"
winapi = { version = "0.3", features = ["windef"] }
cargo-watch = "8.4.0"
